--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TravelPlanner"
         tools:targetApi="31">
+
+        <!-- Splash ekranı, uygulama ilk başlatıldığında açılır -->
         <activity
             android:name=".SplashActivity"
             android:exported="true"
@@ -21,12 +23,22 @@
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".IntroActivity"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
+
+        <!-- Uygulama Splash'ten sonra bu ekrana geçer -->
+        <activity
+            android:name=".IntroActivity"
+            android:exported="true"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+
+        <!-- Bu, uygulamanın ana ekranıdır (Home Screen) -->
+        <activity
+            android:name=".MainActivity"
+            android:exported="true"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+
     </application>
 
 </manifest>
